--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "email": "",
-    "password": "",
+    "email": "nugstrial1@simaenaga.com",
+    "password": "Mexico_2022",
     "format": 4,
     "videoFormat": 5,
-    "outPath": "Nugs downloads"
+    "outPath": "content/drive/Shareddrives/Hi-Res"
 }
